group2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: group2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: 200,404,301,302
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:336205090264:certificate/8faffa51-24b5-4261-a619-3ef9e9fade1e
spec:
  rules:
    - host: devcatalog-dbms.controller-ai.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: fixed-aarpia-catalog-dbms
              port: 
                number: 8098
    - host: devinvoicing-pims.controller-ai.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: aarpia-invoicing-pims
              port: 
                number: 8103
    - host: devocr-adms.controller-ai.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: aarpia-ocr-adms
              port: 
                number: 8100
    - host: devpiletservice.controller-ai.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: aarpia-piletservice
              port: 
                number: 9000
    - host: devschemareg.controller-ai.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: aarpia-schemareg
              port: 
                number: 8080
    - host: id-dev.controller-ai.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: aarpia-aaa
              port: 
                number: 8080
