ingress-custom-configmap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb
spec:
  rules:
  - host: devawsinvoicing.controllerbi.tech
    http:
      paths:
        - path: /
          backend:
            serviceName: invoicing-process
            servicePort: 80
  - host: devawsunnax.controllerbi.tech
    http:
      paths:
        - path: /
          backend:
            serviceName: unnax
            servicePort: 80
